# dquest

./: .#build.sh  .gitignore  README.md  build.sh  dquest.cabal  ghcjs-stack.yaml  run.sh  stack.yaml
app/: Client.hs
client/: client.cabal  stack.yaml
client/app/: Main.hs
client/src/: Admin.hs  Display.hs  ServerApi.hs  Test.hs  Util.hs  Views.hs
client/src/Admin/: QuestEdit.hs  View.hs
client/src/DQuest/: Nav.hs  ServerApi.hs  Util.hs
client/src/DQuest/Widgets/: Hero.hs  Quest.hs  QuestEdit.hs  QuestPage.hs  Search.hs
client/src/DSekt/: Aurora.hs  Methone.hs
client/src/Display/: Hero.hs  Quest.hs
client/src/Util/: Cookie.hs  Events.hs  Location.hs  Widgets.hs
lib/aesonbson/: aeson-bson.cabal
lib/aesonbsonTMP/src/Data/Aeson/: Bson.hs
server/: dquest.cabal  stack.yaml
server/app/: Main.hs
server/src/DQuest/: .#Database.hs  Data.hs  Database.hs  Identify.hs  Server.hs
server/src/DQuest/Database/: Connection.hs  Hero.hs  Quest.hs  TableNames.hs  Util.hs
server/src/Datasektionen/: Login.hs  Types.hs
server/src/Datasektionen/Login/: Internal.hs
server/src/Servant/: Ext.hs
server/webdata/: all.js  lib.js  out.js  out.stats  rts.js  style.css
shared/: shared.cabal
shared/src/DQuest/: Routes.hs
shared/src/DQuest/Data/: Comment.hs  Difficulty.hs  Dummies.hs  Hero.hs  ProtoQuest.hs  Quest.hs  QuestGiver.hs  Reward.hs
shared/src/Datasektionen/: Zfinger.hs
shared/src/Servant/: DQuestTypes.hs
shared/src/Servant/Ext/: Types.hs
src/DQuest/: Data.hs  Database.hs  Routes.hs  Server.hs
src/DQuest/Data/: Comment.hs  Context.hs  Hero.hs  ProtoQuest.hs  Quest.hs  Reward.hs  User.hs
src/Datasektionen/: Pls.hs  Types.hs
src/Datasektionen/Login/: Internal.hs  Types.hs
src/Frontent/: UI.hs
