name:                client
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/client#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Display, Admin, Util, ServerApi, Views
  build-depends:       base >= 4.7 && < 5
                     , shared
                     , reflex-dom == 0.4
                     , text
                     , lens
                     , containers
                     , aeson
  default-language:    Haskell2010
  default-extensions: OverloadedStrings

executable client-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , client
                     , shared
                     , reflex-dom == 0.4
                     , aeson
                     , text

  default-language:    Haskell2010
  default-extensions: OverloadedStrings

test-suite client-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , client
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/client
