name:                dquest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/black0range/dquest#readme
license:             BSD3
license-file:        LICENSE
author:              Tomas Möre
maintainer:          tomas.o.more@gmail.com
copyright:           MIT
category:            Web
build-type:          Simple
-- extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DQuest.Server
                     , DQuest.Database
                     , DQuest.Database.Hero
                     , DQuest.Database.Quest
                     , DQuest.Database.Util
                     , DQuest.Database.TableNames
                     , DQuest.Identify

  other-modules:
                Datasektionen.Login.Types
              , Datasektionen.Login.Internal
              , Datasektionen.Login
              , Datasektionen.Pls
              , Servant.Ext


  build-depends:       base >= 4.7 && < 5
                     , shared
                     , aeson  >= 0.11 && < 0.12
                     , aeson-bson
                     , bson
                     , servant
                     , servant-server
                     , servant-client
                     , safe
                     , wai
                     , warp
                     , time
                     , mtl
                     , directory
                     , filepath
                     , http-media
                     , attoparsec
                     , base-compat
                     , aeson-compat
                     , bytestring
                     , http-types
                     , safe
                     , text
                     , uri-encode
                     , http-client  == 0.5.7.0
                     , http-client-tls == 0.3.5.1
                     , network-uri
                     , containers
                     , safecopy
                     , data-default
                     , mongoDB
                     , shared


  default-language:    Haskell2010

executable server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , dquest

  default-language:    Haskell2010


source-repository head
  type:     git
  location: https://github.com/black0range/dquest
