name:                shared
version:             0.1.0.2
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/shared#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     DQuest.Data.Hero
                     , DQuest.Data.Reward
                     , DQuest.Data.ProtoQuest
                     , DQuest.Data.Quest
                     , DQuest.Data.QuestGiver
                     , DQuest.Data.Comment

                     , DQuest.Data.Difficulty
                     , DQuest.Routes
                     , DQuest.Data
                     , Datasektionen.Types
                     , Datasektionen.Zfinger

                     , Servant.Ext.Types
                     , Servant.DQuestTypes



  build-depends:       base >= 4.7 && < 5
                     , text
                     , aeson == 0.11.3.0
                     , time
                     , servant
                     , bytestring
                     , containers
                     , base-compat
                     , http-media

  default-language:    Haskell2010



source-repository head
  type:     git
  location: https://github.com/githubuser/shared
